--- a/sass/presets/_header.scss
+++ b/sass/presets/_header.scss
@@ -103,3 +103,105 @@
         }
     }
 }
+
+.booking{
+    position: fixed;
+    width: 100%;
+    padding: 12px 110px 12px 180px;
+    background: #fff;
+    z-index: 9;
+    transform: translate(0, -72px);
+    transition: all 0.5s ease;
+
+    .controls{
+        input, select{
+            margin-bottom: 0;
+        }
+
+        &.fourth, &.ninth{
+            display: inline-block;
+
+        }
+
+        &.fourth{
+            width: 24%;
+            margin-right: 1%;
+        }
+
+        &.ninth{
+            width: 11%;
+            margin-right: 1%;
+        }
+
+        @media (max-width: 1400px){
+
+            &.fourth{
+                width: 49%;
+                margin-bottom: 15px;
+                &:nth-child(2){
+                    margin-right: 0;
+                }
+            }
+
+            &.ninth{
+                width: 23.65%;
+                margin-right: 1%;
+            }
+
+        }
+
+        @media (max-width: 768px){
+
+            &.fourth{
+                width: 100%;
+                margin-bottom: 15px;
+                margin-right: 0;
+                &:nth-child(2){
+                    margin-right: 0;
+                }
+            }
+
+            &.ninth{
+                width: 100%;
+                margin-bottom: 15px;
+                margin-right: 0;
+            }
+
+        }
+
+    }
+
+    .pure-button{
+        width: 12%;
+        padding: 12px 0 !important;
+
+        @media (max-width: 1400px){
+            width: 23.65%;
+            margin-right: 0;
+        }
+        @media (max-width: 768px){
+            width: 100%;
+            margin-right: 0;
+            margin-bottom: 30px;
+        }
+    }
+    &.show{
+        transform: translate(0, 0);
+    }
+
+    @media (max-width: 1400px){
+        transform: translate(0, -130px);
+    }
+
+    @media (max-width: 768px){
+        padding-top: 30px;
+        transform: translate(0, -500px);
+    }
+
+    @media (max-width: 640px){
+        padding: 110px 50px 30px;
+        transform: translate(0, -500px);
+    }
+
+
+}
