--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 		"presets/gallery",
 		"presets/map",
 		"presets/profile",
+		"presets/table",
 		"presets/tabs",
 		"presets/footer",
 		"vendor/isotope/isotope",
